--- a/wizview/wizview.glade
+++ b/wizview/wizview.glade
@@ -1,13 +1,136 @@
 <?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
 <!DOCTYPE glade-interface SYSTEM "http://gazpacho.sicem.biz/gazpacho-0.1.dtd">
 <glade-interface>
+    <widget class="GtkDialog" id="mounts_dialog">
+        <property name="default_width">500</property>
+        <property name="has_separator">False</property>
+        <property name="height_request">300</property>
+        <property name="title" context="yes" translatable="yes">Wizbit Mounts</property>
+        <property name="width_request">400</property>
+        <property name="window_position">center</property>
+        <child internal-child="vbox">
+            <widget class="GtkVBox" id="dialog-vbox1">
+                <property name="border_width">2</property>
+                <property name="visible">True</property>
+                <child>
+                    <widget class="GtkHBox" id="hbox1">
+                        <property name="border_width">5</property>
+                        <property name="spacing">6</property>
+                        <property name="visible">True</property>
+                        <child>
+                            <widget class="GtkScrolledWindow" id="mounts_sw">
+                                <property name="hscrollbar_policy">automatic</property>
+                                <property name="shadow_type">etched-in</property>
+                                <property name="visible">True</property>
+                                <property name="vscrollbar_policy">automatic</property>
+                                <child>
+                                    <widget class="GtkTreeView" id="mounts_table">
+                                        <property name="headers_visible">False</property>
+                                        <property name="is_focus">True</property>
+                                        <property name="rules_hint">True</property>
+                                        <property name="visible">True</property>
+                                    </widget>
+                                </child>
+                            </widget>
+                        </child>
+                        <child>
+                            <widget class="GtkVBox" id="groups_buttonvbox">
+                                <property name="spacing">6</property>
+                                <property name="visible">True</property>
+                                <child>
+                                    <widget class="GtkButton" id="mount_share">
+                                        <property name="can_default">True</property>
+                                        <property name="label" context="yes" translatable="yes">Mount Share</property>
+                                        <property name="visible">True</property>
+                                    </widget>
+                                    <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
+                                    </packing>
+                                </child>
+                                <child>
+                                    <widget class="GtkButton" id="umount_share">
+                                        <property name="can_default">True</property>
+                                        <property name="label" context="yes" translatable="yes">Unmount Share</property>
+                                        <property name="sensitive">False</property>
+                                        <property name="visible">True</property>
+                                    </widget>
+                                    <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
+                                        <property name="position">1</property>
+                                    </packing>
+                                </child>
+                            </widget>
+                            <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">1</property>
+                            </packing>
+                        </child>
+                    </widget>
+                    <packing>
+                        <property name="position">1</property>
+                    </packing>
+                </child>
+                <child internal-child="action_area">
+                    <widget class="GtkHButtonBox" id="dialog-action_area12">
+                        <property name="border_width">5</property>
+                        <property name="layout_style">end</property>
+                        <property name="spacing">6</property>
+                        <property name="visible">True</property>
+                        <child>
+                            <widget class="GtkButton" id="groups_dialog_help">
+                                <property name="can_default">True</property>
+                                <property name="label">gtk-help</property>
+                                <property name="response_id">-11</property>
+                                <property name="use_stock">True</property>
+                                <property name="visible">True</property>
+                            </widget>
+                            <packing>
+                                <property name="secondary">True</property>
+                            </packing>
+                        </child>
+                        <child>
+                            <widget class="GtkButton" id="closebutton3">
+                                <property name="can_default">True</property>
+                                <property name="label">gtk-close</property>
+                                <property name="response_id">-7</property>
+                                <property name="use_stock">True</property>
+                                <property name="visible">True</property>
+                            </widget>
+                            <packing>
+                                <property name="position">1</property>
+                            </packing>
+                        </child>
+                    </widget>
+                    <packing>
+                        <property name="expand">False</property>
+                        <property name="pack_type">end</property>
+                    </packing>
+                </child>
+            </widget>
+        </child>
+    </widget>
     <widget class="GtkWindow" id="wizview">
         <property name="default_height">250</property>
         <property name="default_width">440</property>
         <child>
-            <widget class="GtkIconView" id="shares">
-                <property name="is_focus">True</property>
+            <widget class="GtkVBox" id="vbox1">
                 <property name="visible">True</property>
+                <child>
+                    <placeholder/>
+                    <packing/>
+                </child>
+                <child>
+                    <widget class="GtkIconView" id="shares">
+                        <property name="is_focus">True</property>
+                        <property name="visible">True</property>
+                    </widget>
+                    <packing>
+                        <property name="position">1</property>
+                    </packing>
+                </child>
             </widget>
         </child>
     </widget>
