--- a/wizview/wizview.glade
+++ b/wizview/wizview.glade
@@ -6,6 +6,7 @@
         <property name="has_separator">False</property>
         <property name="height_request">300</property>
         <property name="title" context="yes" translatable="yes">Wizbit Mounts</property>
+        <property name="type_hint">normal</property>
         <property name="width_request">400</property>
         <property name="window_position">center</property>
         <child internal-child="vbox">
@@ -25,7 +26,6 @@
                                 <property name="vscrollbar_policy">automatic</property>
                                 <child>
                                     <widget class="GtkTreeView" id="mounts_table">
-                                        <property name="headers_visible">False</property>
                                         <property name="is_focus">True</property>
                                         <property name="rules_hint">True</property>
                                         <property name="visible">True</property>
@@ -40,6 +40,8 @@
                                 <child>
                                     <widget class="GtkButton" id="mount_share">
                                         <property name="can_default">True</property>
+                                        <property name="has_default">True</property>
+                                        <property name="is_focus">True</property>
                                         <property name="label" context="yes" translatable="yes">Mount Share</property>
                                         <property name="visible">True</property>
                                     </widget>
@@ -52,13 +54,23 @@
                                     <widget class="GtkButton" id="umount_share">
                                         <property name="can_default">True</property>
                                         <property name="label" context="yes" translatable="yes">Unmount Share</property>
-                                        <property name="sensitive">False</property>
                                         <property name="visible">True</property>
                                     </widget>
                                     <packing>
                                         <property name="expand">False</property>
                                         <property name="fill">False</property>
                                         <property name="position">1</property>
+                                    </packing>
+                                </child>
+                                <child>
+                                    <widget class="GtkButton" id="create_share">
+                                        <property name="label" context="yes" translatable="yes">Create Share</property>
+                                        <property name="visible">True</property>
+                                    </widget>
+                                    <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
+                                        <property name="position">2</property>
                                     </packing>
                                 </child>
                             </widget>
